--- a/index.html
+++ b/index.html
@@ -197,11 +197,7 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch2.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/orch2.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/orch2.jpg"></a>
                             <div class="text-holder">
@@ -215,11 +211,7 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq2.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/bouq2.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/bouq2.jpg"></a>
                             <div class="text-holder">
@@ -233,11 +225,7 @@
                 <div class="col-md-6 col-lg-4
                                                     web">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch4.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/orch4.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/orch4.jpg"></a>
                             <div class="text-holder">
@@ -252,11 +240,7 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq1.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/bouq1.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/bouq1.jpg"></a>
                             <div class="text-holder">
@@ -270,11 +254,7 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch3.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/orch3.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/orch3.jpg"></a>
                             <div class="text-holder">
@@ -288,11 +268,7 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq3.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/bouq3.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/bouq3.jpg"></a>
                             <div class="text-holder">
@@ -306,11 +282,7 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq4.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/bouq4.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/bouq4.jpg"></a>
                             <div class="text-holder">
@@ -325,11 +297,7 @@
                 <div class="col-md-6 col-lg-4
                                                     branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec1.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/spec1.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/spec1.jpg"></a>
                             <div class="text-holder">
@@ -343,11 +311,7 @@
                 <div class="col-md-6 col-lg-4
                                                     branding">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec2.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/spec2.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/spec2.jpg"></a>
                             <div class="text-holder">
@@ -361,11 +325,7 @@
                 <div class="col-md-6 col-lg-4
                                                     branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec3.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/spec3.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/spec3.jpg"></a>
                             <div class="text-holder">
@@ -379,11 +339,7 @@
                 <div class="col-md-6 col-lg-4
                                                     branding">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec4.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/spec4.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/spec4.jpg"></a>
                             <div class="text-holder">
