--- a/index.html
+++ b/index.html
@@ -179,11 +179,7 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch1.jpg" class="img-fluid" alt="Download free
-                                                            bootstrap 4 admin
-                                                            dashboard, free
-                                                            boootstrap 4
-                                                            templates">
+                        <img src="assets/imgs/orch1.jpg" class="img-fluid" alt="">
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/orch1.jpg"></a>
                             <div class="text-holder">
