--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch1.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/orch1.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/orch1.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/orch1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -193,9 +193,9 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch2.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/orch2.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/orch2.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/orch2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -207,9 +207,9 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq2.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/bouq2.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/bouq2.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/bouq2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -221,9 +221,9 @@
                 <div class="col-md-6 col-lg-4
                                                     web">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch4.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/orch4.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/orch4.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/orch4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -236,9 +236,9 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq1.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/bouq1.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/bouq1.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/bouq1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -250,9 +250,9 @@
                 <div class="col-md-6 col-lg-4
                                                     web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/orch3.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/orch3.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/orch3.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/orch3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -264,9 +264,9 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq3.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/bouq3.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/bouq3.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/bouq3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -278,9 +278,9 @@
                 <div class="col-md-6 col-lg-4
                                                     advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/bouq4.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/bouq4.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/bouq4.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/bouq4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -293,9 +293,9 @@
                 <div class="col-md-6 col-lg-4
                                                     branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec1.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/spec1.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/spec1.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/spec1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -307,9 +307,9 @@
                 <div class="col-md-6 col-lg-4
                                                     branding">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec2.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/spec2.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/spec2.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/spec2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -321,9 +321,9 @@
                 <div class="col-md-6 col-lg-4
                                                     branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec3.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/spec3.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/spec3.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/spec3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
@@ -335,9 +335,9 @@
                 <div class="col-md-6 col-lg-4
                                                     branding">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/spec4.JPEG" class="img-fluid" alt="">
+                        <img src="assets/imgs/spec4.JPG" class="img-fluid" alt="">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/spec4.JPEG"></a>
+                            <a class="img-popup" href="assets/imgs/spec4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!
