--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <!-- Service Section -->
     <section id="service" class="section pt-0">
         <div class="container">
-            <h6 class="section-title text-center">Our Service</h6>
+            <h6 class="section-title text-center">Our Services</h6>
             <h6 class="section-subtitle text-center mb-5 pb-3">The most beautiful flowers are at Blooming</h6>
 
             <div class="row">
@@ -82,9 +82,9 @@
                         <div class="card-body">
                             <small class="text-primary
                                         font-weight-bold">01</small>
-                            <h5 class="card-title mt-3"> Beatae quo
+                            <h5 class="card-title mt-3"> Home delivery
                                 <h5>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet, cquasi cupiditate voluptate debitis saepe dolorem totam dolor repudiandae quo nihil, repellendus nesciunt ab fuga quae, minima reprehenderit sequi fugit.</p>
+                                    <p class="mb-0">Surprise your loved ones with a fresh bouquet of flowers delivered straight to their doorstep. We offer a wide selection of bouquets and floral arrangements for all occasions.</p>
                         </div>
                     </div>
                 </div>
@@ -93,9 +93,9 @@
                         <div class="card-body">
                             <small class="text-primary
                                                 font-weight-bold">02</small>
-                            <h5 class="card-title mt-3">Delectus Suscipit
+                            <h5 class="card-title mt-3">Custom floral arrangements
                                 <h5>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet, cquasi cupiditate voluptate debitis saepe dolorem totam dolor repudiandae quo nihil, repellendus nesciunt ab fuga quae, minima reprehenderit sequi fugit.</p>
+                                    <p class="mb-0">Do you have a specific idea in mind for a gift? Trust our team of professionals to create a custom floral arrangement based on your preferences and tastes.</p>
                         </div>
                     </div>
                 </div>
@@ -104,9 +104,9 @@
                         <div class="card-body">
                             <small class="text-primary
                                                         font-weight-bold">03</small>
-                            <h5 class="card-title mt-3">Itaque harum
+                            <h5 class="card-title mt-3">Floral workshops
                                 <h5>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet, cquasi cupiditate voluptate debitis saepe dolorem totam dolor repudiandae quo nihil, repellendus nesciunt ab fuga quae, minima reprehenderit sequi fugit.</p>
+                                    <p class="mb-0">Want to learn how to create your own bouquets and floral arrangements? Sign up for one of our floral workshops and let your creativity run wild! Our experts will be there to guide and advise you.</p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,8 @@
                         <div class="col-12
                                                             mt-4">
                             <br><br>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo iusto quidem laborum atque, sapiente ipsa excepturi fuga cum sed in assumenda eos quasi harum culpa laboriosam nulla, incidunt quae. Voluptatum.
+                            <p>Come and visit our flower shop, where you'll find a wide selection of fresh flowers, plants, and arrangements. Our friendly staff are here to help you choose the perfect gift, and you can watch our skilled florists in action
+                                in our work area. Take a seat and relax in our cozy seating area while you browse our catalogs and magazines. We look forward to welcoming you to our beautiful shop.
                             </p>
                         </div>
 
@@ -184,7 +185,7 @@
                             <a class="img-popup" href="assets/imgs/orch1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Beautiful orchids, the perfect gift or decorative addition to any setting.
                                 </p>
                             </div>
                         </div>
@@ -198,7 +199,7 @@
                             <a class="img-popup" href="assets/imgs/orch2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Beautiful orchids, the perfect gift or decorative addition to any setting.
                                 </p>
                             </div>
                         </div>
@@ -212,7 +213,7 @@
                             <a class="img-popup" href="assets/imgs/bouq2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Fresh bouquets for every occasion and taste, carefully curated by our expert florists.
                                 </p>
                             </div>
                         </div>
@@ -226,7 +227,7 @@
                             <a class="img-popup" href="assets/imgs/orch4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Beautiful orchids, the perfect gift or decorative addition to any setting.
                                 </p>
                             </div>
                         </div>
@@ -241,7 +242,7 @@
                             <a class="img-popup" href="assets/imgs/bouq1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Fresh bouquets for every occasion and taste, carefully curated by our expert florists.
                                 </p>
                             </div>
                         </div>
@@ -255,7 +256,7 @@
                             <a class="img-popup" href="assets/imgs/orch3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Orchide</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Beautiful orchids, the perfect gift or decorative addition to any setting.
                                 </p>
                             </div>
                         </div>
@@ -269,7 +270,7 @@
                             <a class="img-popup" href="assets/imgs/bouq3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Fresh bouquets for every occasion and taste, carefully curated by our expert florists.
                                 </p>
                             </div>
                         </div>
@@ -283,7 +284,7 @@
                             <a class="img-popup" href="assets/imgs/bouq4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Bouquet</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Fresh bouquets for every occasion and taste, carefully curated by our expert florists.
                                 </p>
                             </div>
                         </div>
@@ -298,7 +299,7 @@
                             <a class="img-popup" href="assets/imgs/spec1.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Exclusive, one-of-a-kind bouquet crafted by our expert florists. Only available in our shop.
                                 </p>
                             </div>
                         </div>
@@ -312,7 +313,7 @@
                             <a class="img-popup" href="assets/imgs/spec2.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Exclusive, one-of-a-kind bouquet crafted by our expert florists. Only available in our shop.
                                 </p>
                             </div>
                         </div>
@@ -326,7 +327,7 @@
                             <a class="img-popup" href="assets/imgs/spec3.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Exclusive, one-of-a-kind bouquet crafted by our expert florists. Only available in our shop.
                                 </p>
                             </div>
                         </div>
@@ -340,7 +341,7 @@
                             <a class="img-popup" href="assets/imgs/spec4.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Special</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!
+                                <p class="subtitle">Exclusive, one-of-a-kind bouquet crafted by our expert florists. Only available in our shop.
                                 </p>
                             </div>
                         </div>
